# real-estate-tracker

./: .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  RealEstateTracker_ERD.mmd  RealEstateTracker_SD.mmd  database.db  database.py  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 09eebf8935d7_first_version.py  8bc4737da10a_.py
api/v1/routes/: concept.py  contract.py  properties_concepts.py  property.py  transaction.py
backend/: main.py
backend/models/: concept.py  contract.py  properties_concepts.py  property.py  transaction.py
core/dependencies/: logger.py
core/logging/: logger.py  logger_with_correlation_id.py  logging_config.py
core/middlewares/: correlation.py  rate_limiter.py
frontend/: 📊_Home.py
frontend/api/: client.py
frontend/pages/: 1_🏠Properties.py  2_💸Concepts.py  3_↔️Properties_Concepts.py  4_📋Contracts.py  5_💵Transactions.py
models/: concept.py  contract.py  properties_concepts.py  property.py  transaction.py
repositories/: base_repository.py  concept_repository.py  contract_repository.py  properties_concepts_repository.py  property_repository.py  transaction_repository.py
routes/: concept.py  contract.py  properties_concepts.py  property.py  transaction.py
schemas/: concept.py  contract.py  properties_concepts.py  property.py  transaction.py
seeds/: add_initial_data.py
services/: concept_service.py  contract_service.py  properties_concepts_service.py  property_service.py  transaction_service.py
