[project]
name = "real-estate-tracker"
version = "1.0.0"
description = ""
authors = [
    {name = "Sebastian Moreno Camani",email = "sebastian.s.moreno.camani@pwc.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
strict = true
plugins = ["pydantic.mypy"]
exclude = [
  "^alembic/",
  "^.venv/",
  "^venv/",
  "^env/",
]

[tool.pylint.main]
ignore = ["tests"]

[tool.pylint.messages_control]
disable= ["C0114","C0115","C0116"]
